# wasm-plugin

./: Cargo.toml  Readme.md  wasi_snapshot_preview1.reactor.wasm
crates/wasm-plugin/: Cargo.toml
crates/wasm-plugin/src/: lib.rs
crates/wasm-runner/: Cargo.toml
crates/wasm-runner/src/: main.rs
wit/: world.wit
